# rpcudp

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  Makefile  README.markdown  README.md  dev-requirements.txt  example.py  pyproject.toml  requirements.txt  rpcudp.py  setup.py
.github/workflows/: ci.yml
example/: client.py  server.py
rpcudp/: __init__.py  exceptions.py  protocol.py
